test: make adapter tests compatible with immutable types